# config_manager

./: CMakeLists.txt  LICENSE  README.md
example/: cli.sh  main.c
include/: config_manager.h
src/: cmc.c  config_manager.c  private.h
src/cms/: cms.c  config_file.c  config_file.h  config_json.c  socket_handler.c  socket_handler.h
src/jpath/: cJSON.c  jpath.c  jpath.h  jpath_expr.c  jpath_expr.h
